# becca

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile
.github/workflows/: build-buildbot-container.yml
app/: CMakeLists.txt  main.unix.cc  main.win32.cc
docker/buildbot/: Dockerfile  entry.sh  pacman.conf.cat  sudoers.cat
runtime/: CMakeLists.txt  runtime.cc
